--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,8 @@
 ---
-applications:
+Applications:
 - name: spring_boot_test
   memory: 1G
   instances: 1
-  path: target/spring_boot_test.jar
+  buildpack: java_buildpack_offline
+  stack: cflinuxfs2
+  path: spring_boot_test.jar
