--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <artifactId>spring_boot_test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
 
